# osgModeling

./: AUTHORS.txt  CMakeLists.txt  ChangeLog  NEWS.txt  README.md  README.txt
CMakeModules/: FindDoxygen.cmake
data/: CMakeLists.txt  bunny-1500.osg  cow-1500.osg  dragon-1500.osg  pawn.osg
doc/Doxyfiles/: custom_Footer.html  doxyfile.cmake
examples/osgmodelingbasic/: CMakeLists.txt  osgmodelingbasic.cpp
examples/osgmodelingboolean/: CMakeLists.txt  osgmodelingboolean.cpp
examples/osgmodelingbsptree/: CMakeLists.txt  osgmodelingbsptree.cpp
examples/osgmodelingnurbs/: CMakeLists.txt  osgmodelingnurbs.cpp
examples/osgmodelingsubd/: CMakeLists.txt  osgmodelingsubd.cpp
src/osgModeling/: BezierCurve.cpp  BezierSurface.cpp  BoolOperator.cpp  BspTree.cpp  CMakeLists.txt  Curve.cpp  Extrude.cpp  Helix.cpp  Lathe.cpp  Loft.cpp  ModelVisitor.cpp  NormalVisitor.cpp  NurbsCurve.cpp  NurbsSurface.cpp  PolyMesh.cpp  Subdivision.cpp  TexCoordVisitor.cpp  Utilities.cpp
src/osgPlugins/osgModeling/: CMakeLists.txt  IO_Bezier.cpp  IO_BspTree.cpp  IO_Curve.cpp  IO_Extrude.cpp  IO_Helix.cpp  IO_Lathe.cpp  IO_Loft.cpp  IO_Model.cpp  IO_Nurbs.cpp  IO_PolyMesh.cpp
